src/objects/inscor__Allocation__c.object
<CustomObject>
    <fields>
        <fullName>PN_Copy__c</fullName>
        <description>Lookup to PN</description>
        <formula>inscor__Part_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PN Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Allocation_Type__c</fullName>
        <label>Allocation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stock</fullName>
                </value>
                <value>
                    <fullName>Repair Order</fullName>
                </value>
                <value>
                    <fullName>Purchase Order</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Non Stock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Comments_for_Repair__c</fullName>
        <label>Comments for Repair</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Line</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipName>Allocation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Non_Inventory_Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Non Inventory Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Allocations (Owner Code)</relationshipLabel>
        <relationshipName>Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Line_Number__c</fullName>
        <formula>TEXT(inscor__Purchase_Order_Line__r.inscor__Line_Number__c)</formula>
        <label>PO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Number__c</fullName>
        <formula>inscor__Purchase_Order_Line__r.inscor__PO_Number__r.Name</formula>
        <label>PO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Number__c</fullName>
        <formula>inscor__Inventory_Line__r.inscor__Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Line</label>
        <referenceTo>inscor__Purchase_Order_Line__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>inscor__Purchase_Order__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Invoiced__c</fullName>
        <label>Quantity Invoiced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Line_Number__c</fullName>
        <formula>TEXT(inscor__Repair_Order_Line__r.inscor__Line_Number__c )</formula>
        <label>RO Line Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__RO_Number__c</fullName>
        <formula>inscor__Repair_Order_Line__r.inscor__Repair_Order__r.Name</formula>
        <label>RO Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipName>Allocations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order_Line__c</fullName>
        <label>Sales Order Line</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>inscor__Sales_Order_Line__c.inscor__Order__c</field>
                <operation>equals</operation>
                <valueField>$Source.inscor__Sales_Order__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipName>Allocation_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <formula>inscor__Inventory_Line__r.inscor__Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Sold_Condition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Condition</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Sold_Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Allocations</relationshipLabel>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Repair Reserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__WO_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WO Material</label>
        <referenceTo>inscor__Work_Order_Material__c</referenceTo>
        <relationshipName>Allocations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Allocation</label>
    <nameField>
        <displayFormat>ALL-{0}</displayFormat>
        <label>Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>